--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -30,7 +30,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ProfilePictureCorners"
             android:scaleType="centerCrop"
-            android:padding="15dp"
+            android:padding="10dp"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -44,32 +44,32 @@
         app:layout_constraintStart_toEndOf="@id/profile_LAY_image"
         app:layout_constraintTop_toTopOf="@id/profile_LAY_image"
         app:layout_constraintBottom_toBottomOf="@id/profile_LAY_image"
-        android:paddingStart="15dp"
-        android:paddingEnd="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="15dp"
         android:id="@+id/profile_LAY_info"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         >
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@string/app_name"
+            app:layout_constraintHeight_percent="0.3"
+            android:text="@string/example_name"
             android:autoSizeMinTextSize="14sp"
             android:autoSizeMaxTextSize="35sp"
             android:autoSizeTextType="uniform"
-            android:gravity="center_vertical"
-            android:padding="6dp"
+            android:gravity="start|center_vertical"
             android:id="@+id/profile_LBL_name"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/profile_FRAG_points_status"
-            app:layout_constraintStart_toStartOf="parent"
             />
 
        <fragment
            android:layout_width="wrap_content"
-           android:layout_height="0dp"
+           android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_LBL_name"
-           app:layout_constraintBottom_toTopOf="@id/profile_BTN_my_sails"
+           android:layout_marginTop="5dp"
            android:name="com.idan_koren_israeli.sailtracker.fragment.PointsStatusFragment"
            tools:layout="@layout/fragment_points_status"
            android:id="@+id/profile_FRAG_points_status"
@@ -77,15 +77,16 @@
 
 
         <com.google.android.material.button.MaterialButton
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintWidth_percent="0.35"
             android:id="@+id/profile_BTN_my_sails"
             android:autoSizeMaxTextSize="22sp"
             android:autoSizeTextType="uniform"
-            android:text="@string/sails"
-            android:padding="5dp"
+            android:text="@string/profile_events_history"
+            android:padding="4dp"
+            android:lines="1"
+            app:layout_constraintTop_toBottomOf="@id/profile_FRAG_points_status"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:gravity="center"
