--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -4,19 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/darker_gray"
+    android:background="@drawable/splash_background"
     tools:context=".activity.AddEventActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.15"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:text="@string/add_event_title"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         android:autoSizeTextType="uniform"
-        android:padding="25dp"
+        android:padding="30dp"
         android:id="@+id/add_event_LBL_title"
         />
 
@@ -33,7 +33,6 @@
 
 
 
-
         <!-- Step 1: name and type -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -46,10 +45,13 @@
                 android:layout_width="match_parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_height="0dp"
-                app:layout_constraintHeight_percent="0.2"
+                android:layout_marginTop="20dp"
+                app:layout_constraintHeight_percent="0.15"
+                android:autoSizeMaxTextSize="26sp"
+                android:autoSizeMinTextSize="14sp"
+                android:padding="10dp"
                 android:text="@string/add_event_name_label"
                 android:autoSizeTextType="uniform"
-                android:padding="30dp"
                 android:gravity="center"
                 android:lines="1"
                 android:id="@+id/add_event_LBL_name"
@@ -59,7 +61,7 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                app:layout_constraintHeight_percent="0.15"
+                app:layout_constraintHeight_percent="0.1"
                 android:id="@+id/add_event_EDT_name"
                 android:hint="@string/add_event_name_hint"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +69,8 @@
                 app:layout_constraintTop_toBottomOf="@id/add_event_LBL_name"
                 android:gravity="center"
                 android:autofillHints="@string/add_event_name_label"
-                android:layout_margin="15dp"
                 android:inputType="textPersonName"
+                android:layout_marginTop="10dp"
                 android:ems="12"
                 android:autoSizeTextType="uniform"
                 />
@@ -91,40 +93,26 @@
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:id="@+id/add_event_RBTN_free_event"
-                    android:background="@android:color/holo_green_light"
-                    android:layout_margin="5dp"
+                    style="@style/FormRadioButton"
                     android:text="@string/free_event"
-                    android:autoSizeTextType="uniform"
-                    android:lines="1"
                     />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:id="@+id/add_event_RBTN_members_sail"
-                    android:background="@android:color/holo_green_light"
+                    style="@style/FormRadioButton"
                     android:text="@string/members_sail"
-                    android:maxLines="1"
-                    android:autoSizeMinTextSize="12sp"
-                    android:autoSizeTextType="uniform"
-                    android:layout_margin="5dp"
-
                     />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:id="@+id/add_event_event_RBTN_guided_sail"
-                    android:background="@android:color/holo_green_light"
-                    android:layout_margin="5dp"
                     android:text="@string/guided_sail"
-                    android:lines="1"
-                    android:autoSizeTextType="uniform"
+                    style="@style/FormRadioButton"
                     />
 
             </RadioGroup>
@@ -132,6 +120,7 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <!-- Step 2: time -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -145,23 +134,30 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                app:layout_constraintHeight_percent="0.2"
-                android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent"
-                android:autoSizeTextType="uniform"
-                android:lines="1"
-                android:padding="20dp"
+                app:layout_constraintHeight_percent="0.15"
+                style="@style/FormTextLabel"
                 android:text="@string/add_event_time_start_label"
                 android:id="@+id/add_event_LBL_start_time"
                 />
 
 
             <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
+                app:layout_constraintWidth_percent="0.7"
                 app:layout_constraintHeight_percent="0.2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="center"
+                android:textColor="@color/colorText"
+                android:autoSizeMinTextSize="12sp"
+                android:autoSizeMaxTextSize="22sp"
                 android:autoSizeTextType="uniform"
+                app:icon="@drawable/ic_baseline_access_time_24"
+                app:iconGravity="start"
+                app:iconPadding="0dp"
+                app:iconSize="32dp"
                 android:lines="1"
                 android:padding="20dp"
                 app:layout_constraintTop_toBottomOf="@id/add_event_LBL_start_time"
@@ -172,12 +168,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                app:layout_constraintHeight_percent="0.2"
-                android:gravity="center"
+                app:layout_constraintHeight_percent="0.15"
                 app:layout_constraintTop_toBottomOf="@id/add_event_BTN_start_time"
-                android:autoSizeTextType="uniform"
-                android:lines="1"
-                android:padding="20dp"
+                style="@style/FormTextLabel"
                 android:layout_marginTop="30dp"
                 android:text="@string/add_event_time_end_label"
                 android:id="@+id/add_event_LBL_end_time"
@@ -185,13 +178,23 @@
 
 
             <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
+                app:layout_constraintWidth_percent="0.7"
                 app:layout_constraintHeight_percent="0.2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="center"
+                android:autoSizeMinTextSize="12sp"
+                android:autoSizeMaxTextSize="22sp"
                 android:autoSizeTextType="uniform"
                 android:lines="1"
+                app:icon="@drawable/ic_baseline_access_time_24"
+                app:iconGravity="start"
+                app:iconPadding="0dp"
+                app:iconSize="32dp"
                 android:padding="20dp"
+                android:textColor="@color/colorText"
                 app:layout_constraintTop_toBottomOf="@id/add_event_LBL_end_time"
                 android:text="@string/add_event_hour_empty"
                 android:id="@+id/add_event_BTN_end_time"
@@ -200,6 +203,8 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         <!-- Step 3: max participant, price, description -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -214,19 +219,24 @@
                 android:layout_height="0dp"
                 android:orientation="horizontal"
                 app:layout_constraintHeight_percent="0.2"
+                android:layout_marginTop="32dp"
                 android:gravity="center_horizontal"
                 android:id="@+id/add_event_LAY_price_participants"
                 app:layout_constraintTop_toTopOf="parent"
                 android:weightSum="1"
                 >
 
-                <EditText
+                <com.google.android.material.button.MaterialButton
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:ems="6"
-                    android:inputType="number"
+                    android:ems="11"
+                    app:icon="@drawable/ic_baseline_person_24"
+                    app:iconSize="36dp"
+                    android:lines="2"
+                    android:maxLines="2"
+                    android:textColorHint="@color/colorText"
                     android:hint="@string/add_event_max_participants"
-                    android:id="@+id/add_event_EDT_max_participants"
+                    android:id="@+id/add_event_BTN_max_participants"
                     />
 
                 <View
@@ -235,30 +245,41 @@
                     android:layout_weight="0.2"
                     />
 
-                <EditText
+                <com.google.android.material.button.MaterialButton
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:ems="6"
+                    android:ems="8"
+                    app:icon="@drawable/ic_points_wheel"
+                    app:iconSize="36dp"
+                    app:iconTintMode="multiply"
                     android:inputType="number"
-                    android:id="@+id/add_event_EDT_price"
+                    android:gravity="center"
+                    android:id="@+id/add_event_BTN_price"
                     android:hint="@string/price"
+                    android:textColorHint="@color/colorText"
                     />
 
             </LinearLayout>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="40dp"
                 android:padding="20dp"
-                android:ems="4"
+                android:minLines="1"
+                android:lines="2"
+                android:maxLines="5"
                 android:enabled="true"
-                android:inputType="text"
+                android:inputType="textLongMessage"
                 android:hint="@string/add_event_description"
                 app:layout_constraintTop_toBottomOf="@id/add_event_LAY_price_participants" android:id="@+id/add_event_EDT_description"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
 
 
 
@@ -289,9 +310,12 @@
             android:layout_gravity="center_horizontal"
             android:autoSizeTextType="uniform"
             android:padding="15dp"
+            android:autoSizeMinTextSize="13sp"
+            android:autoSizeMaxTextSize="20sp"
             android:layout_margin="20dp"
             android:text="@string/back"
             android:id="@+id/add_event_BTN_back"
+            app:cornerRadius="10dp"
             android:theme="@style/FormButton"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
             />
@@ -303,7 +327,10 @@
             android:layout_gravity="center_horizontal"
             android:autoSizeTextType="uniform"
             android:padding="15dp"
+            android:autoSizeMinTextSize="13sp"
+            android:autoSizeMaxTextSize="20sp"
             android:layout_margin="20dp"
+            app:cornerRadius="10dp"
             android:text="@string/next"
             android:id="@+id/add_event_BTN_next"
             android:theme="@style/FormButton"
