--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,10 +34,37 @@
         <item name="cornerSize">15%</item>
     </style>
 
+
     <style name="FormButton" parent="Theme.MaterialComponents">
-        <item name="colorOnPrimary">@android:color/white</item>
-        <item name="colorPrimary">@android:color/holo_green_light</item>
-        <item name="colorOnSurface">@android:color/holo_green_dark</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/colorText</item>
+        <item name="colorOnSurface">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorText</item>
     </style>
+
+    <style name="FormRadioButton" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="autoSizeTextType">uniform</item>
+        <item name="autoSizeMinTextSize">12dp</item>
+        <item name="autoSizeMaxTextSize">18dp</item>
+        <item name="android:gravity">top|center_horizontal</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="buttonCompat">@android:color/transparent</item>
+        <item name="maxLines">1</item>
+        <item name="android:lines">1</item>
+        <item name="android:layout_weight">1</item>
+
+    </style>
+
+    <style name="FormTextLabel" parent="Widget.AppCompat.TextView">
+        <item name="autoSizeMinTextSize">12sp</item>
+        <item name="autoSizeMaxTextSize">28sp</item>
+        <item name="autoSizeTextType">uniform</item>
+        <item name="android:gravity">center</item>
+        <item name="android:lines">1</item>
+        <item name="color">@color/colorText</item>
+    </style>
+
 
 </resources>
