--- a/app/src/main/res/layout/recycler_registrable_event_item.xml
+++ b/app/src/main/res/layout/recycler_registrable_event_item.xml
@@ -156,7 +156,10 @@
                         android:autoSizeMinTextSize="10sp"
                         android:autoSizeTextType="uniform"
                         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                        app:cornerRadius="20dp"
+                        app:cornerRadius="8dp"
+                        app:strokeColor="@color/colorPrimary"
+                        app:strokeWidth="2.5dp"
+                        app:backgroundTint="@color/colorPrimaryLightest"
                         app:iconTintMode="multiply"
                         app:iconTint="@android:color/white"
                         android:text="@string/number_00"
