--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -8,17 +8,17 @@
     tools:context=".activity.AddEventActivity">
 
     <TextView
+        android:id="@+id/add_event_LBL_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.15"
         android:layout_marginTop="40dp"
-        android:text="@string/add_event_title"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
         android:autoSizeTextType="uniform"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
         android:padding="30dp"
-        android:id="@+id/add_event_LBL_title"
-        />
+        android:text="@string/add_event_title"
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ViewFlipper
@@ -96,7 +96,7 @@
                     android:layout_height="match_parent"
                     android:id="@+id/add_event_RBTN_free_event"
                     style="@style/FormRadioButton"
-                    android:text="@string/free_event"
+                    android:text="@string/evening_event"
                     />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
@@ -150,7 +150,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="center"
-                android:textColor="@color/colorText"
                 android:autoSizeMinTextSize="12sp"
                 android:autoSizeMaxTextSize="22sp"
                 android:autoSizeTextType="uniform"
@@ -194,7 +193,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="32dp"
                 android:padding="20dp"
-                android:textColor="@color/colorText"
+                android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintTop_toBottomOf="@id/add_event_LBL_end_time"
                 android:text="@string/add_event_hour_empty"
                 android:id="@+id/add_event_BTN_end_time"
@@ -234,7 +233,7 @@
                     app:iconSize="36dp"
                     android:lines="2"
                     android:maxLines="2"
-                    android:textColorHint="@color/colorText"
+                    android:textColorHint="@color/colorPrimaryDark"
                     android:hint="@string/add_event_max_participants"
                     android:id="@+id/add_event_BTN_max_participants"
                     />
@@ -256,7 +255,7 @@
                     android:gravity="center"
                     android:id="@+id/add_event_BTN_price"
                     android:hint="@string/price"
-                    android:textColorHint="@color/colorText"
+                    android:textColorHint="@color/colorPrimaryDark"
                     />
 
             </LinearLayout>
@@ -316,8 +315,7 @@
             android:text="@string/back"
             android:id="@+id/add_event_BTN_back"
             app:cornerRadius="10dp"
-            android:theme="@style/FormButton"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+            android:textColor="@android:color/white"
             />
 
         <com.google.android.material.button.MaterialButton
@@ -333,8 +331,7 @@
             app:cornerRadius="10dp"
             android:text="@string/next"
             android:id="@+id/add_event_BTN_next"
-            android:theme="@style/FormButton"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+            android:textColor="@android:color/white"
             />
 
 
