--- a/app/src/main/res/layout/fragment_navigation_bar.xml
+++ b/app/src/main/res/layout/fragment_navigation_bar.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:weightSum="4"
-    android:background="@android:color/darker_gray"
+    android:background="@color/colorPrimaryWhite"
     android:orientation="horizontal"
     >
 
