--- a/app/src/main/res/layout/recycler_add_event_item.xml
+++ b/app/src/main/res/layout/recycler_add_event_item.xml
@@ -12,9 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/add"
-        android:theme="@style/FormButton"
+        android:padding="14dp"
         android:id="@+id/event_add_item_BTN_button"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
         />
 
 </RelativeLayout>
