--- a/app/src/main/res/layout/fragment_photo_collection.xml
+++ b/app/src/main/res/layout/fragment_photo_collection.xml
@@ -10,6 +10,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="120dp"
+        android:clipToPadding="false"
         android:id="@+id/photo_collection_RCY_recycler"
         />
 
