--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="fontFamily">@font/montserrat</item>
         <item name="buttonStyle">@style/MaterialButtonDefaultStyle</item>
+        <item name="hintTextColor">@android:color/white</item>
     </style>
 
 
@@ -50,14 +51,13 @@
         <item name="autoSizeTextType">uniform</item>
         <item name="autoSizeMinTextSize">12dp</item>
         <item name="autoSizeMaxTextSize">18dp</item>
-        <item name="android:gravity">top|center_horizontal</item>
+        <item name="android:gravity">center</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:padding">5dp</item>
         <item name="android:layout_margin">8dp</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="buttonCompat">@android:color/transparent</item>
-        <item name="maxLines">1</item>
-        <item name="android:lines">1</item>
+        <item name="android:lines">2</item>
         <item name="android:layout_weight">1</item>
 
     </style>
