--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -34,18 +34,12 @@
             />
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/gallery_FRAG_profile"
-            android:id="@+id/gallery_INV_2"
-            app:layout_constraintHeight_percent="0.05"
-            />
+
         
         <fragment
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/gallery_INV_2"
+            app:layout_constraintTop_toBottomOf="@id/gallery_FRAG_profile"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/gallery_FRAG_photo_collection"
             android:name="com.idan_koren_israeli.sailtracker.fragment.PhotoCollectionFragment"
@@ -57,7 +51,8 @@
             android:layout_height="wrap_content"
             app:fabSize="normal"
             android:src="@drawable/ic_baseline_photo_camera_24"
-            android:tint="@android:color/white"
+            app:tint="@color/colorPrimaryDarker"
+            app:backgroundTint="@color/colorAccentYellow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="25dp"
