--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,11 +11,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:text="@string/sails"
+        android:text="@string/history_title"
         android:gravity="center"
         android:autoSizeTextType="uniform"
         android:autoSizeMaxTextSize="50sp"
         android:autoSizeMinTextSize="30sp"
+        android:padding="15dp"
+        android:layout_marginTop="25dp"
         android:id="@+id/my_sails_LBL_title"
         />
 
@@ -25,6 +27,7 @@
         android:layout_below="@id/my_sails_LBL_title"
         android:id="@+id/my_sails_RYC_recycler"
         android:paddingBottom="120dp"
+        android:layout_marginTop="20dp"
         android:clipToPadding="false"
         />
 
@@ -43,6 +46,7 @@
         android:layout_height="match_parent"
         android:name="com.idan_koren_israeli.sailtracker.fragment.LoadingFragment"
         android:layout_below="@id/my_sails_LBL_title"
+        android:layout_marginTop="20dp"
         android:id="@+id/my_sails_FRAG_loading"
         tools:layout="@layout/fragment_loading"
         />
