--- a/app/src/main/res/layout/fragment_points_status.xml
+++ b/app/src/main/res/layout/fragment_points_status.xml
@@ -32,13 +32,19 @@
         />
 
     <com.google.android.material.button.MaterialButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintStart_toEndOf="@id/points_status_LBL_points_count"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
-        android:background="@drawable/ic_baseline_add_circle_24"
+        app:icon="@drawable/ic_baseline_add_circle_24"
+        android:background="@android:color/transparent"
+        app:iconSize="30dp"
+        app:iconPadding="0dp"
+        android:padding="0dp"
+        app:iconGravity="textStart"
+        app:iconTint="@color/colorPrimary"
         android:layout_margin="5dp"
         android:id="@+id/points_status_BTN_add"
         />
