Added application banner to home menu

--- a/app/src/main/res/drawable/shape_calendar_date_background.xml
+++ b/app/src/main/res/drawable/shape_calendar_date_background.xml
@@ -3,7 +3,7 @@
     android:insetLeft="-3dp">
 
     <shape>
-        <solid android:color="@color/colorAccentYellow"/>
+        <solid android:color="@color/colorSecondary"/>
         <stroke
             android:width="3dp"
             android:color="@color/colorAccentYellowDark"
