--- a/app/src/main/res/drawable/shape_profile_gradient_bg.xml
+++ b/app/src/main/res/drawable/shape_profile_gradient_bg.xml
@@ -3,12 +3,15 @@
     android:shape="rectangle"
     >
     <stroke
-
-
+        android:color="@color/profile_photo_stroke"
+        android:width="1dp"
+        />
+    <corners
+        android:radius="3dp"
         />
     <gradient
         android:angle="90"
-        android:startColor="#CBD5D4"
-        android:endColor="#FFFFFF"
+        android:startColor="#D5D5D5"
+        android:endColor="#F4F4F4"
         android:type="linear"/>
 </shape>
