--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/background_light_gradient">
+    android:background="@drawable/shape_profile_gradient_bg">
 
 
     <!-- setting image inside constraint layout in order to be able to force it to be squared -->
@@ -15,6 +15,7 @@
         android:layout_marginBottom="15dp"
         app:layout_constraintWidth_percent="0.2"
         app:layout_constraintDimensionRatio="1:1"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/profile_LAY_image"
         >
@@ -26,6 +27,8 @@
             android:layout_height="match_parent"
             android:id="@+id/profile_IMG_picture"
             android:background="@android:color/darker_gray"
+            app:strokeWidth="2dp"
+            app:strokeColor="@color/profile_photo_stroke"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ProfilePictureCorners"
@@ -40,13 +43,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.7"
         app:layout_constraintStart_toEndOf="@id/profile_LAY_image"
         app:layout_constraintTop_toTopOf="@id/profile_LAY_image"
         app:layout_constraintBottom_toBottomOf="@id/profile_LAY_image"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="15dp"
         android:id="@+id/profile_LAY_info"
+        android:layout_marginStart="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         >
