Changed FAB design of PhotoInspectActivity & improved PhotoCollection UI

--- a/app/src/main/res/layout/activity_photo_inspect.xml
+++ b/app/src/main/res/layout/activity_photo_inspect.xml
@@ -30,6 +30,8 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:id="@+id/photo_inspect_FAB_back"
+        app:tint="@color/colorPrimaryDarker"
+        app:backgroundTint="@color/colorSecondary"
         android:src="@drawable/ic_baseline_arrow_back_24"
         android:layout_margin="40dp"
         app:fabCustomSize="50dp"
@@ -41,6 +43,8 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:id="@+id/photo_inspect_FAB_delete"
+        app:tint="@color/colorPrimaryDarker"
+        app:backgroundTint="@color/colorSecondary"
         android:src="@drawable/ic_baseline_delete_24"
         android:layout_alignParentEnd="true"
         android:layout_margin="40dp"
