--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -30,7 +30,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.06"
+            app:layout_constraintHeight_percent="0.055"
             app:layout_constraintWidth_percent="0.4"
             app:layout_constraintTop_toBottomOf="@id/calendar_CALENDAR"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +46,7 @@
             android:paddingBottom="6dp"
             android:autoSizeMaxTextSize="22sp"
             android:autoSizeMinTextSize="12sp"
+            android:letterSpacing="0.03"
             android:autoSizeTextType="uniform"
             android:background="@drawable/shape_calendar_date_background"
             />
