--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -16,6 +16,7 @@
         android:autoSizeTextType="uniform"
         android:autoSizeMaxTextSize="50sp"
         android:autoSizeMinTextSize="30sp"
+        android:textColor="@color/colorPrimary"
         android:padding="15dp"
         android:layout_marginTop="25dp"
         android:id="@+id/my_sails_LBL_title"
@@ -35,7 +36,8 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:src="@drawable/ic_baseline_arrow_back_24"
-        app:backgroundTint="@color/colorAccent"
+        app:tint="@color/colorPrimaryDarker"
+        app:backgroundTint="@color/colorSecondary"
         android:layout_alignParentBottom="true"
         android:layout_margin="40dp"
         android:id="@+id/my_sails_FAB_back"
