--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="colorText">#2C2C2C</color>
     <color name="photo_loading">#28282B</color>
     <color name="off_white">#eeeeee</color>
+    <color name="light_grey">#cccccc</color>
 
     <color name="profile_photo_stroke">#1E01579B</color>
 
