Implemented default background image between all activities

--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/shape_light_gradient_bg"
+    android:id="@+id/base_IMG_background"
     tools:context=".activity.AddEventActivity">
 
     <TextView
