--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:background="@drawable/shape_light_gradient_bg"
+    android:id="@+id/base_IMG_background"
     tools:context=".activity.SplashActivity">
+
 
     <ImageView
         android:layout_width="match_parent"
