--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,9 +9,10 @@
     android:weightSum="1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.92"
+        app:layout_constraintHeight_percent="0.92"
         >
 
         <SearchView
@@ -75,9 +76,10 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.08"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/home_FRAG_navigator_bar"
         android:name="com.idan_koren_israeli.sailtracker.fragment.NavigationBarFragment"
         tools:layout="@layout/fragment_navigation_bar" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
